WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
29654
[GTK] REGRESSION: BitmapImage::getGdkPixbuf fails for non-square images
https://bugs.webkit.org/show_bug.cgi?id=29654
Summary
[GTK] REGRESSION: BitmapImage::getGdkPixbuf fails for non-square images
Martin Robinson
Reported
2009-09-22 15:16:04 PDT
For images that do not have a square aspect ratio, BitmapImage::getGdkPixbuf will return a corrupted GdkPixbuf*.
Attachments
Patch for this issue
(1.62 KB, patch)
2009-09-22 16:06 PDT
,
Martin Robinson
eric
: review-
Details
Formatted Diff
Diff
Fix for this issue and additional test
(3.40 KB, patch)
2009-09-22 17:26 PDT
,
Martin Robinson
eric
: review+
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
Image file used in new manual-test
(2.99 KB, image/x-win-bitmap)
2009-09-22 17:27 PDT
,
Martin Robinson
no flags
Details
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Martin Robinson
Comment 1
2009-09-22 16:06:16 PDT
Created
attachment 39957
[details]
Patch for this issue
Eric Seidel (no email)
Comment 2
2009-09-22 16:18:42 PDT
Comment on
attachment 39957
[details]
Patch for this issue No way to test this? Please either add a test or explain in the ChangeLog why it's impossible/impractical. Please use a real email address for the ChangeLog too. :)
Martin Robinson
Comment 3
2009-09-22 17:26:33 PDT
Created
attachment 39964
[details]
Fix for this issue and additional test Doh, and it's not even Monday. I've added a test to the existing manual image cursor test for Gtk. I will also be attaching the cursor image file to this bug, as I believe that binary data from git diffs is not compatible with svn.
Martin Robinson
Comment 4
2009-09-22 17:27:12 PDT
Created
attachment 39965
[details]
Image file used in new manual-test
Eric Seidel (no email)
Comment 5
2009-09-23 17:40:36 PDT
Comment on
attachment 39964
[details]
Fix for this issue and additional test OK. If you want the commit-bot to handle this for you, you'll need to request addition to the commit-queue with commit-queue=?.
Martin Robinson
Comment 6
2009-09-23 19:29:34 PDT
(In reply to
comment #5
)
> OK. If you want the commit-bot to handle this for you, you'll need to request > addition to the commit-queue with commit-queue=?.
It may need to be manually committed since I'm adding a binary file and my patch is a git commit. Should I commit-queue=? it anyhow?
Eric Seidel (no email)
Comment 7
2009-09-24 13:22:23 PDT
Comment on
attachment 39964
[details]
Fix for this issue and additional test svn-apply should be able to handle this patch. Adding cq+
WebKit Commit Bot
Comment 8
2009-09-24 13:46:02 PDT
Comment on
attachment 39964
[details]
Fix for this issue and additional test Rejecting patch 39964 from commit-queue. This patch will require manual commit. Patch
https://bugs.webkit.org/attachment.cgi?id=39964
from
bug 29654
failed to download and apply.
Eric Seidel (no email)
Comment 9
2009-09-24 14:13:19 PDT
patching file WebCore/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file WebCore/manual-tests/gtk/cursor-image.html patch: **** Only garbage was found in the patch input. patching file WebCore/platform/graphics/gtk/ImageGtk.cpp Logging in as
eseidel@chromium.org
... Rejecting patch 39964 from commit-queue. Hum... I guess svn-apply can't handle this patch.
Oliver Hunt
Comment 10
2009-09-29 11:41:11 PDT
Committed
r48888
Eric Seidel (no email)
Comment 11
2009-09-29 12:25:50 PDT
Thank you Oliver.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug