2009-09-23  Martin Robinson  <martin.james.robinson@gmail.com>

Reviewed by Xan Lopez.

        [GTK] REGRESSION: BitmapImage::getGdkPixbuf fails for non-square images
        https://bugs.webkit.org/show_bug.cgi?id=29654

        Enable tests which are now passing because of key event fixes.

        * platform/gtk/Skipped:
2009-09-23  Martin Robinson  <martin.james.robinson@gmail.com>

        Reviewed by Xan Lopez.

        [GTK] REGRESSION: BitmapImage::getGdkPixbuf fails for non-square images
        https://bugs.webkit.org/show_bug.cgi?id=29654

        Give GDK_Backspace key events the proper text properties.

        Instead of adding new tests, this change removes existing tests
        from Gtk's skipped list.

        * platform/gtk/KeyEventGtk.cpp:
        (WebCore::keyIdentifierForGdkKeyCode):
        (WebCore::singleCharacterString):
2009-09-23  Martin Robinson  <martin.james.robinson@gmail.com>

        Reviewed by Xan Lopez.

        [GTK] REGRESSION: BitmapImage::getGdkPixbuf fails for non-square images
        https://bugs.webkit.org/show_bug.cgi?id=29654

        Ensure that even when GTKSimpleIMContext filters non-IME keystrokes,
        keyboard events are fired properly.

        * WebCoreSupport/EditorClientGtk.cpp:
        (WebKit::clearPendingIMData):
        (WebKit::imContextCommitted):
        (WebKit::imContextPreeditChanged):
        (WebKit::EditorClient::shouldBeginEditing):
        (WebKit::EditorClient::shouldEndEditing):
        (WebKit::interpretEditorCommandKeyEvent):
        (WebKit::handleCaretBrowsingKeyboardEvent):
        (WebKit::EditorClient::handleKeyboardEvent):
        (WebKit::EditorClient::handleInputMethodKeydown):

Canonical link: https://commits.webkit.org/40260@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48697 268f45cc-cd09-0410-ab3c-d52691b4dbfc